--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -2028,25 +2028,161 @@ li > a#plone-contentmenu-workflow {
   display: none;
 }
 
-/* line 25, ../scss/ulearn.scss */
+/* line 16, ../scss/_arrows.scss */
+.bubble {
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 1010;
+  display: block;
+  background-color: white;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+}
+/* line 34, ../scss/_arrows.scss */
+.bubble.top {
+  margin-bottom: 10px;
+}
+/* line 35, ../scss/_arrows.scss */
+.bubble.right {
+  margin-left: 10px;
+}
+/* line 36, ../scss/_arrows.scss */
+.bubble.bottom {
+  margin-top: 10px;
+}
+/* line 37, ../scss/_arrows.scss */
+.bubble.left {
+  margin-right: 10px;
+}
+
+/* line 40, ../scss/_arrows.scss */
+.bubble-container {
+  position: absolute;
+}
+
+/* line 42, ../scss/_arrows.scss */
+.bubble-title {
+  margin: 0;
+  padding: 8px 12px;
+  font-size: 107.692308%;
+  font-weight: normal;
+  line-height: 18px;
+  text-shadow: 0 -1px white;
+  background-color: #f7f7f7;
+  border-bottom: 1px solid #d1d1d1;
+  -webkit-border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 0 0;
+}
+
+/* line 54, ../scss/_arrows.scss */
+.bubble-content {
+  padding: 9px 12px;
+}
+/* line 56, ../scss/_arrows.scss */
+.bubble-content p, .bubble-content ul, .bubble-content ol {
+  margin-bottom: 0;
+}
+
+/* line 62, ../scss/_arrows.scss */
+.bubble .arrow,
+.bubble .arrow:after {
+  position: absolute;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+}
+
+/* line 70, ../scss/_arrows.scss */
+.bubble .arrow:after {
+  content: "";
+  z-index: -1;
+}
+
+/* line 76, ../scss/_arrows.scss */
+.bubble.top .arrow {
+  bottom: -8px;
+  left: 50%;
+  margin-left: -8px;
+  border-width: 8px 8px 0;
+  border-top-color: red;
+}
+/* line 82, ../scss/_arrows.scss */
+.bubble.top .arrow:after {
+  border-width: 9px 9px 0;
+  border-top-color: rgba(0, 0, 0, 0.15);
+  bottom: -1px;
+  left: -9px;
+}
+/* line 89, ../scss/_arrows.scss */
+.bubble.right .arrow {
+  top: 50%;
+  left: -8px;
+  margin-top: -8px;
+  border-width: 8px 8px 8px 0;
+  border-right-color: red;
+}
+/* line 95, ../scss/_arrows.scss */
+.bubble.right .arrow:after {
+  border-width: 9px 9px 9px 0;
+  border-right-color: rgba(0, 0, 0, 0.15);
+  bottom: -9px;
+  left: -1px;
+}
+/* line 102, ../scss/_arrows.scss */
+.bubble.bottom .arrow {
+  top: -8px;
+  left: 50%;
+  margin-left: -8px;
+  border-width: 0 8px 8px;
+  border-bottom-color: #f7f7f7;
+}
+/* line 108, ../scss/_arrows.scss */
+.bubble.bottom .arrow:after {
+  border-width: 0 9px 9px;
+  border-bottom-color: rgba(0, 0, 0, 0.15);
+  top: -1px;
+  left: -9px;
+}
+/* line 115, ../scss/_arrows.scss */
+.bubble.left .arrow {
+  top: 50%;
+  right: -8px;
+  margin-top: -8px;
+  border-width: 8px 0 8px 8px;
+  border-left-color: red;
+}
+/* line 121, ../scss/_arrows.scss */
+.bubble.left .arrow:after {
+  border-width: 9px 0 9px 9px;
+  border-left-color: rgba(0, 0, 0, 0.15);
+  bottom: -9px;
+  right: -1px;
+}
+
+/* line 26, ../scss/ulearn.scss */
 body {
   background: #eae9e4;
   font-family: "Open Sans", sans-serif;
 }
 
-/* line 30, ../scss/ulearn.scss */
+/* line 31, ../scss/ulearn.scss */
 input, button, select, textarea {
   font-family: "Open Sans", sans-serif;
 }
 
-/* line 34, ../scss/ulearn.scss */
+/* line 35, ../scss/ulearn.scss */
 #portal-header {
   border-top: none;
   border-bottom: none;
   background: #eae9e4!important;
 }
 
-/* line 40, ../scss/ulearn.scss */
+/* line 41, ../scss/ulearn.scss */
 .ulearnbox h2 {
   color: #f58d3d;
   font-size: 20px;
@@ -2056,7 +2192,7 @@ input, button, select, textarea {
   padding: 0;
 }
 
-/* line 48, ../scss/ulearn.scss */
+/* line 49, ../scss/ulearn.scss */
 a {
   color: #007BC0;
   -webkit-transition: 0.25s;
@@ -2066,24 +2202,24 @@ a {
   -webkit-backface-visibility: hidden;
 }
 
-/* line 57, ../scss/ulearn.scss */
+/* line 58, ../scss/ulearn.scss */
 a:hover {
   color: #004A74;
   text-decoration: none;
 }
 
-/* line 60, ../scss/ulearn.scss */
+/* line 61, ../scss/ulearn.scss */
 a:hover, a:focus {
   color: #004A74;
   text-decoration: underline;
 }
 
-/* line 64, ../scss/ulearn.scss */
+/* line 65, ../scss/ulearn.scss */
 a:hover, a:active {
   outline: 0 none;
 }
 
-/* line 68, ../scss/ulearn.scss */
+/* line 69, ../scss/ulearn.scss */
 .masthead {
   background-color: #f58d3d;
   margin-bottom: 0;
@@ -2091,27 +2227,27 @@ a:hover, a:active {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #dddddd;
 }
 
-/* line 81, ../scss/ulearn.scss */
+/* line 82, ../scss/ulearn.scss */
 .dropdown-menu a {
   text-decoration: none;
 }
 
-/* line 84, ../scss/ulearn.scss */
+/* line 85, ../scss/ulearn.scss */
 .span6 {
   background: white;
 }
 
-/* line 88, ../scss/ulearn.scss */
+/* line 89, ../scss/ulearn.scss */
 #peu {
   background: none;
   border-top: none;
 }
-/* line 91, ../scss/ulearn.scss */
+/* line 92, ../scss/ulearn.scss */
 #peu a {
   color: white;
 }
 
-/* line 96, ../scss/ulearn.scss */
+/* line 97, ../scss/ulearn.scss */
 #peu .container {
   border-top: none;
   background-color: #f58d3d;
@@ -2121,24 +2257,24 @@ a:hover, a:active {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #dddddd;
 }
 
-/* line 106, ../scss/ulearn.scss */
+/* line 107, ../scss/ulearn.scss */
 #peu .inner {
   padding: 20px;
 }
 
-/* line 108, ../scss/ulearn.scss */
+/* line 109, ../scss/ulearn.scss */
 input[type="text"] {
   border-color: #E76E10;
   margin-right: 5px;
   padding: 4px 0 4px 10px;
 }
 
-/* line 113, ../scss/ulearn.scss */
+/* line 114, ../scss/ulearn.scss */
 input[type="text"]:focus {
   border-color: #34495E;
 }
 
-/* line 117, ../scss/ulearn.scss */
+/* line 118, ../scss/ulearn.scss */
 .ulearnbox {
   background: url("/++ulearn++static/images/pix_cantonada.png") no-repeat right top white;
   padding: 5px 10px 10px;
@@ -2147,17 +2283,17 @@ input[type="text"]:focus {
   box-shadow: -1px 1px 2px #dddddd;
 }
 
-/* line 124, ../scss/ulearn.scss */
+/* line 125, ../scss/ulearn.scss */
 .ulearnbox a {
   text-decoration: none;
 }
 
-/* line 125, ../scss/ulearn.scss */
+/* line 126, ../scss/ulearn.scss */
 #badges {
   background: white;
 }
 
-/* line 128, ../scss/ulearn.scss */
+/* line 129, ../scss/ulearn.scss */
 .box_badges {
   background: none repeat scroll 0 0 #f58d3d;
   color: white;
@@ -2171,7 +2307,7 @@ input[type="text"]:focus {
   width: 100%;
 }
 
-/* line 140, ../scss/ulearn.scss */
+/* line 141, ../scss/ulearn.scss */
 .box_badges:hover {
   opacity: 0.8;
   cursor: pointer;
@@ -2179,29 +2315,29 @@ input[type="text"]:focus {
   transition: all 0.25s ease 0s;
 }
 
-/* line 141, ../scss/ulearn.scss */
+/* line 142, ../scss/ulearn.scss */
 .novetat {
   background: none repeat scroll 0 0 #34495e;
 }
 
-/* line 144, ../scss/ulearn.scss */
+/* line 145, ../scss/ulearn.scss */
 #user {
   color: #666666;
   font-size: 0.8em;
   margin-bottom: 5px;
 }
 
-/* line 149, ../scss/ulearn.scss */
+/* line 150, ../scss/ulearn.scss */
 #user p {
   margin-bottom: 0;
 }
 
-/* line 156, ../scss/ulearn.scss */
+/* line 157, ../scss/ulearn.scss */
 .nav-pills > .active > a, .nav-pills > .active > a:hover, .nav-pills > .active > a:focus {
   background-color: #DEDED6;
 }
 
-/* line 159, ../scss/ulearn.scss */
+/* line 160, ../scss/ulearn.scss */
 .nav-pills > li > a {
   background: none repeat scroll 0 0 #deded6;
   color: #34495E;
@@ -2210,13 +2346,13 @@ input[type="text"]:focus {
   outline: none;
 }
 
-/* line 166, ../scss/ulearn.scss */
+/* line 167, ../scss/ulearn.scss */
 #box_comunitats .nav {
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
-/* line 170, ../scss/ulearn.scss */
+/* line 171, ../scss/ulearn.scss */
 .num {
   background: none repeat scroll 0 0 #f58d3d;
   border-left: 1px solid #eeeeee;
@@ -2233,22 +2369,22 @@ input[type="text"]:focus {
   width: 33px;
 }
 
-/* line 185, ../scss/ulearn.scss */
+/* line 186, ../scss/ulearn.scss */
 .num:hover {
   opacity: 0.8;
 }
 
-/* line 186, ../scss/ulearn.scss */
+/* line 187, ../scss/ulearn.scss */
 .icons {
   margin-right: 4px;
 }
 
-/* line 187, ../scss/ulearn.scss */
+/* line 188, ../scss/ulearn.scss */
 #miniatures {
   margin-top: 10px;
 }
 
-/* line 190, ../scss/ulearn.scss */
+/* line 191, ../scss/ulearn.scss */
 #miniatures img {
   height: 60px;
   overflow: hidden;
@@ -2258,26 +2394,74 @@ input[type="text"]:focus {
   transition: all 0.1s ease 0s;
 }
 
-/* line 198, ../scss/ulearn.scss */
+/* line 199, ../scss/ulearn.scss */
 #miniatures img:hover {
   opacity: 0.8;
 }
 
-/* line 199, ../scss/ulearn.scss */
+/* line 201, ../scss/ulearn.scss */
 #menusup {
   background: none repeat scroll 0 0 #deded6;
-  border: 1px solid white;
   padding-bottom: 1px;
   border-bottom: 0;
+  height: 35px;
+}
+/* line 207, ../scss/ulearn.scss */
+#menusup nav {
+  border-bottom: 0;
+  margin-bottom: 0;
+}
+/* line 211, ../scss/ulearn.scss */
+#menusup nav .bubble {
+  background: #DEDED6;
+}
+/* line 214, ../scss/ulearn.scss */
+#menusup nav .bubble .arrow {
+  border-top-color: #DEDED6;
+  display: none;
+}
+/* line 219, ../scss/ulearn.scss */
+#menusup nav .bubble:hover {
+  background: #EEEEEE;
+}
+/* line 224, ../scss/ulearn.scss */
+#menusup nav .bubble-content {
+  padding: 7px 0px;
+}
+/* line 226, ../scss/ulearn.scss */
+#menusup nav a {
+  background: #DEDED6;
+  color: #444;
+  border-radius: 0;
+  border: 0;
+  padding: 11px 15px 7px 7px;
+  text-shadow: 1px 1px 0px white;
+  text-decoration: none;
+  margin: 0;
+}
+/* line 236, ../scss/ulearn.scss */
+#menusup nav a:hover {
+  background: #EEEEEE;
+}
+/* line 242, ../scss/ulearn.scss */
+#menusup nav .active .arrow {
+  border-top-color: #f58d3d;
+  display: block;
+}
+/* line 247, ../scss/ulearn.scss */
+#menusup nav .active, #menusup nav .active a, #menusup nav .active a:hover {
+  background: #f58d3d !important;
+  color: white;
+  text-shadow: none;
 }
 
-/* line 205, ../scss/ulearn.scss */
+/* line 257, ../scss/ulearn.scss */
 #menusup .nav-tabs {
   border-bottom: 0;
   margin-bottom: 0;
 }
 
-/* line 209, ../scss/ulearn.scss */
+/* line 261, ../scss/ulearn.scss */
 #menusup .nav-tabs > li > a {
   background: #DEDED6;
   color: #444;
@@ -2290,25 +2474,25 @@ input[type="text"]:focus {
   margin: 0;
 }
 
-/* line 220, ../scss/ulearn.scss */
+/* line 272, ../scss/ulearn.scss */
 #menusup .nav-tabs > .active > a, #menusup .nav-tabs > .active > a:hover, .nav-tabs > .active > a:focus {
   background: #f58d3d;
   color: white;
   text-shadow: none;
 }
 
-/* line 225, ../scss/ulearn.scss */
+/* line 277, ../scss/ulearn.scss */
 #menusup .nav-tabs > li > a:hover, .nav-tabs > li > a:focus {
   background: #EEEEEE;
   transition: all 0.25s ease 0s;
 }
 
-/* line 229, ../scss/ulearn.scss */
+/* line 281, ../scss/ulearn.scss */
 #menusup .icons {
   font-size: 20px;
 }
 
-/* line 231, ../scss/ulearn.scss */
+/* line 283, ../scss/ulearn.scss */
 #day {
   background: none repeat scroll 0 0 #f58d3d;
   border-radius: 4px 4px 4px 4px;
@@ -2322,32 +2506,32 @@ input[type="text"]:focus {
   margin-bottom: 0;
 }
 
-/* line 243, ../scss/ulearn.scss */
+/* line 295, ../scss/ulearn.scss */
 #day p {
   margin: 0;
 }
 
-/* line 244, ../scss/ulearn.scss */
+/* line 296, ../scss/ulearn.scss */
 .data {
   font-size: 13px;
   padding-top: 6px;
 }
 
-/* line 245, ../scss/ulearn.scss */
+/* line 297, ../scss/ulearn.scss */
 #agenda {
   background: #f5f5f5;
   font-size: 12px;
   margin-top: 10px;
 }
 
-/* line 250, ../scss/ulearn.scss */
+/* line 302, ../scss/ulearn.scss */
 #esdev {
   line-height: 15px;
   padding: 8px 4px 0 2px;
   margin-bottom: 0;
 }
 
-/* line 255, ../scss/ulearn.scss */
+/* line 307, ../scss/ulearn.scss */
 #calendari {
   background: none repeat scroll 0 0 whitesmoke;
   margin-top: 10px;
@@ -2355,7 +2539,7 @@ input[type="text"]:focus {
   text-shadow: 1px 1px 0 white;
 }
 
-/* line 261, ../scss/ulearn.scss */
+/* line 313, ../scss/ulearn.scss */
 #box_agenda .hiddenStructure {
   background: none repeat scroll 0 0 #eae9e4;
   color: black;
@@ -2363,29 +2547,29 @@ input[type="text"]:focus {
   padding: 1px;
 }
 
-/* line 267, ../scss/ulearn.scss */
+/* line 319, ../scss/ulearn.scss */
 .weekdays {
   font-size: 11px;
 }
 
-/* line 268, ../scss/ulearn.scss */
+/* line 320, ../scss/ulearn.scss */
 .ploneCalendar {
   width: 100%;
   font-size: 13px;
 }
 
-/* line 269, ../scss/ulearn.scss */
+/* line 321, ../scss/ulearn.scss */
 .event {
   text-shadow: none;
   text-align: center;
 }
 
-/* line 270, ../scss/ulearn.scss */
+/* line 322, ../scss/ulearn.scss */
 .event:hover {
   background: #fff;
 }
 
-/* line 271, ../scss/ulearn.scss */
+/* line 323, ../scss/ulearn.scss */
 .todayevent {
   background: #007BC0;
   text-shadow: none;
@@ -2393,29 +2577,29 @@ input[type="text"]:focus {
   border-radius: 2px;
 }
 
-/* line 272, ../scss/ulearn.scss */
+/* line 324, ../scss/ulearn.scss */
 .event a {
   color: #555;
   font-weight: normal;
 }
 
-/* line 273, ../scss/ulearn.scss */
+/* line 325, ../scss/ulearn.scss */
 .todayevent a {
   color: #fff;
 }
 
-/* line 275, ../scss/ulearn.scss */
+/* line 327, ../scss/ulearn.scss */
 #box_valorats ul, #box_comentaris ul {
   margin-top: 10px;
   margin-left: 25px;
 }
 
-/* line 277, ../scss/ulearn.scss */
+/* line 329, ../scss/ulearn.scss */
 #box_valorats li a:hover, #box_comentaris li a:hover {
   text-decoration: underline;
 }
 
-/* line 279, ../scss/ulearn.scss */
+/* line 331, ../scss/ulearn.scss */
 #box_valorats li, #box_comentaris li {
   border-bottom: 1px solid #eeeeee;
   font-size: 13px;
@@ -2424,14 +2608,14 @@ input[type="text"]:focus {
   padding-bottom: 8px;
 }
 
-/* line 286, ../scss/ulearn.scss */
+/* line 338, ../scss/ulearn.scss */
 #box_valorats i, #box_comentaris i {
   color: #34495E;
   font-size: 15px;
   vertical-align: middle;
 }
 
-/* line 293, ../scss/ulearn.scss */
+/* line 345, ../scss/ulearn.scss */
 .btn-comunitat {
   color: #FFFFFF;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -2454,7 +2638,7 @@ input[type="text"]:focus {
   width: 100%;
 }
 
-/* line 318, ../scss/ulearn.scss */
+/* line 370, ../scss/ulearn.scss */
 .btn-comunitat:hover,
 .btn-comunitat:active,
 .btn-comunitat.active,
@@ -2465,7 +2649,7 @@ input[type="text"]:focus {
   *background-color: #003bb3;
 }
 
-/* line 323, ../scss/ulearn.scss */
+/* line 375, ../scss/ulearn.scss */
 #menusup .nav-tabs > .btn-plus > a {
   background: none repeat scroll 0 0 #34495e;
   color: white;
@@ -2474,13 +2658,13 @@ input[type="text"]:focus {
   text-shadow: none;
 }
 
-/* line 330, ../scss/ulearn.scss */
+/* line 382, ../scss/ulearn.scss */
 #menusup .nav-tabs > .btn-plus > a:hover {
   background: none repeat scroll 0 0 #34495e;
   opacity: 0.8;
 }
 
-/* line 335, ../scss/ulearn.scss */
+/* line 387, ../scss/ulearn.scss */
 #communitylist {
   padding: 10px;
   font-size: 13px;
@@ -2488,7 +2672,7 @@ input[type="text"]:focus {
   text-shadow: 1px 1px 0px white;
   background: #f9f9f9;
 }
-/* line 342, ../scss/ulearn.scss */
+/* line 394, ../scss/ulearn.scss */
 #communitylist .eines {
   color: #34495E;
   float: right;
@@ -2496,12 +2680,12 @@ input[type="text"]:focus {
   margin: 0 10px 50px;
   text-decoration: none;
 }
-/* line 350, ../scss/ulearn.scss */
+/* line 402, ../scss/ulearn.scss */
 #communitylist ul {
   margin-left: 0;
   list-style: none;
 }
-/* line 355, ../scss/ulearn.scss */
+/* line 407, ../scss/ulearn.scss */
 #communitylist li {
   min-height: 45px;
   line-height: 20px;
@@ -2513,23 +2697,23 @@ input[type="text"]:focus {
   background: #f9f9f9;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #dddddd;
 }
-/* line 367, ../scss/ulearn.scss */
+/* line 419, ../scss/ulearn.scss */
 #communitylist a {
   color: #555;
   text-decoration: none;
 }
-/* line 371, ../scss/ulearn.scss */
+/* line 423, ../scss/ulearn.scss */
 #communitylist a h4 {
   color: #F58D3D;
   font-size: 16px;
   margin-bottom: 0;
   margin-top: 0;
 }
-/* line 377, ../scss/ulearn.scss */
+/* line 429, ../scss/ulearn.scss */
 #communitylist a h4:hover {
   opacity: 0.8;
 }
-/* line 381, ../scss/ulearn.scss */
+/* line 433, ../scss/ulearn.scss */
 #communitylist img {
   margin-bottom: 35px;
   margin-right: 15px;
@@ -2537,22 +2721,22 @@ input[type="text"]:focus {
   border: 2px solid white;
   max-width: 54px;
 }
-/* line 388, ../scss/ulearn.scss */
+/* line 440, ../scss/ulearn.scss */
 #communitylist img:hover {
   transition: all 0.25s ease 0s;
   border: 2px solid #f58d3d;
 }
-/* line 391, ../scss/ulearn.scss */
+/* line 443, ../scss/ulearn.scss */
 #communitylist .item {
   margin-right: 50px;
 }
 
-/* line 396, ../scss/ulearn.scss */
+/* line 448, ../scss/ulearn.scss */
 .icon-ulearn-community, .icon-ulearn.community {
   background-position: -312px -192px;
 }
 
-/* line 398, ../scss/ulearn.scss */
+/* line 450, ../scss/ulearn.scss */
 #listing-table a.contenttype-ulearn-community:before,
 .template-folder_tabular_view .listing a.contenttype-ulearn-community:before {
   background-position: -312px -192px;
