--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -73,12 +73,6 @@ a:hover, a:active {
   box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #DDDDDD;
 }
 
-// Victor
-// .pull-right {
-//     float: right;
-//     margin-top: 2em;
-// }
-
 .dropdown-menu a {
   text-decoration:none;
   }
@@ -150,9 +144,6 @@ border-color: #34495E;
 #user p {
   margin-bottom:0;
   }
-
-// Victor
-// .navbar-inner a {color:white;}
 
 .nav-pills > .active > a, .nav-pills > .active > a:hover, .nav-pills > .active > a:focus {
     background-color: #DEDED6;
@@ -409,7 +400,7 @@ text-shadow:none;
     }
 
     li {
-        min-height: 45px;
+        min-height: 55px;
         line-height: 20px;
         border-bottom: 1px solid #DDDDDD;
         margin-bottom: 0;
@@ -435,7 +426,6 @@ text-shadow:none;
     }
 
     img {
-        margin-bottom: 35px;
         margin-right: 15px;
         margin-top: 3px;
         border:2px solid white;
@@ -456,3 +446,5 @@ text-shadow:none;
 }
 
 #box_perfil .span9 {overflow-y: hidden; height: 150px;}
+
+#searchcommunities {margin-right: auto; margin-left: auto; width: 300px;}
