--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -446,5 +446,6 @@ text-shadow:none;
 }
 
 #box_perfil .span9 {overflow-y: hidden; height: 150px;}
+#box_community img {width: 150px;}
 
 #searchcommunities {margin-right: auto; margin-left: auto; width: 300px;}
