--- a/ulearn/theme/scss/_arrows.scss
+++ b/ulearn/theme/scss/_arrows.scss
@@ -37,7 +37,7 @@ $white:                 #fff !default;
   &.left    { margin-right: 10px; }
 
 }
-.bubble-container {position: absolute;}
+// .bubble-container {position: absolute;}
 
 .bubble-title {
   margin: 0;
