--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -2057,11 +2057,6 @@ li > a#plone-contentmenu-workflow {
   margin-right: 10px;
 }
 
-/* line 40, ../scss/_arrows.scss */
-.bubble-container {
-  position: absolute;
-}
-
 /* line 42, ../scss/_arrows.scss */
 .bubble-title {
   margin: 0;
@@ -2399,36 +2394,42 @@ input[type="text"]:focus {
   opacity: 0.8;
 }
 
-/* line 192, ../scss/ulearn.scss */
+/* line 193, ../scss/ulearn.scss */
+.menuwrapper {
+  background-color: #eae9e4;
+  height: 45px;
+}
+
+/* line 198, ../scss/ulearn.scss */
 #menusup {
   background: none repeat scroll 0 0 #DEDED6;
   padding-bottom: 1px;
   border-bottom: 0;
   height: 35px;
 }
-/* line 198, ../scss/ulearn.scss */
+/* line 204, ../scss/ulearn.scss */
 #menusup nav {
   border-bottom: 0;
   margin-bottom: 0;
 }
-/* line 202, ../scss/ulearn.scss */
+/* line 208, ../scss/ulearn.scss */
 #menusup nav .bubble {
   background: #DEDED6;
+  border-right: 4px solid #EEE;
 }
-/* line 205, ../scss/ulearn.scss */
+/* line 212, ../scss/ulearn.scss */
 #menusup nav .bubble .arrow {
   border-top-color: #DEDED6;
-  display: none;
 }
-/* line 210, ../scss/ulearn.scss */
+/* line 217, ../scss/ulearn.scss */
 #menusup nav .bubble:hover {
   background: #EEEEEE;
 }
-/* line 215, ../scss/ulearn.scss */
+/* line 222, ../scss/ulearn.scss */
 #menusup nav .bubble-content {
   padding: 7px 0px;
 }
-/* line 217, ../scss/ulearn.scss */
+/* line 224, ../scss/ulearn.scss */
 #menusup nav a {
   background: #DEDED6;
   color: #444;
@@ -2443,29 +2444,29 @@ input[type="text"]:focus {
   -o-transition: 0s;
   transition: 0s;
 }
-/* line 231, ../scss/ulearn.scss */
+/* line 238, ../scss/ulearn.scss */
 #menusup nav a:hover {
-  background: #EEEEEE;
+  color: #000;
 }
-/* line 237, ../scss/ulearn.scss */
+/* line 246, ../scss/ulearn.scss */
 #menusup nav .active .arrow {
   border-top-color: #f58d3d;
   display: block;
 }
-/* line 242, ../scss/ulearn.scss */
+/* line 251, ../scss/ulearn.scss */
 #menusup nav .active, #menusup nav .active a, #menusup nav .active a:hover {
   background: #f58d3d !important;
   color: white;
   text-shadow: none;
 }
 
-/* line 252, ../scss/ulearn.scss */
+/* line 261, ../scss/ulearn.scss */
 #menusup .nav-tabs {
   border-bottom: 0;
   margin-bottom: 0;
 }
 
-/* line 256, ../scss/ulearn.scss */
+/* line 265, ../scss/ulearn.scss */
 #menusup .nav-tabs > li > a {
   background: #DEDED6;
   color: #444;
@@ -2478,25 +2479,25 @@ input[type="text"]:focus {
   margin: 0;
 }
 
-/* line 267, ../scss/ulearn.scss */
+/* line 276, ../scss/ulearn.scss */
 #menusup .nav-tabs > .active > a, #menusup .nav-tabs > .active > a:hover, .nav-tabs > .active > a:focus {
   background: #f58d3d;
   color: white;
   text-shadow: none;
 }
 
-/* line 272, ../scss/ulearn.scss */
+/* line 281, ../scss/ulearn.scss */
 #menusup .nav-tabs > li > a:hover, .nav-tabs > li > a:focus {
   background: #EEEEEE;
   transition: all 0.25s ease 0s;
 }
 
-/* line 276, ../scss/ulearn.scss */
+/* line 285, ../scss/ulearn.scss */
 #menusup .icons {
   font-size: 20px;
 }
 
-/* line 278, ../scss/ulearn.scss */
+/* line 287, ../scss/ulearn.scss */
 #day {
   background: none repeat scroll 0 0 #f58d3d;
   border-radius: 4px 4px 4px 4px;
@@ -2510,32 +2511,32 @@ input[type="text"]:focus {
   margin-bottom: 0;
 }
 
-/* line 290, ../scss/ulearn.scss */
+/* line 299, ../scss/ulearn.scss */
 #day p {
   margin: 0;
 }
 
-/* line 291, ../scss/ulearn.scss */
+/* line 300, ../scss/ulearn.scss */
 .data {
   font-size: 13px;
   padding-top: 6px;
 }
 
-/* line 292, ../scss/ulearn.scss */
+/* line 301, ../scss/ulearn.scss */
 #agenda {
   background: #f5f5f5;
   font-size: 12px;
   margin-top: 10px;
 }
 
-/* line 297, ../scss/ulearn.scss */
+/* line 306, ../scss/ulearn.scss */
 #esdev {
   line-height: 15px;
   padding: 8px 4px 0 2px;
   margin-bottom: 0;
 }
 
-/* line 302, ../scss/ulearn.scss */
+/* line 311, ../scss/ulearn.scss */
 #calendari {
   background: none repeat scroll 0 0 #F5F5F5;
   margin-top: 10px;
@@ -2543,7 +2544,7 @@ input[type="text"]:focus {
   text-shadow: 1px 1px 0 white;
 }
 
-/* line 308, ../scss/ulearn.scss */
+/* line 317, ../scss/ulearn.scss */
 #box_agenda .hiddenStructure {
   background: none repeat scroll 0 0 #EAE9E4;
   color: black;
@@ -2551,29 +2552,29 @@ input[type="text"]:focus {
   padding: 1px;
 }
 
-/* line 314, ../scss/ulearn.scss */
+/* line 323, ../scss/ulearn.scss */
 .weekdays {
   font-size: 11px;
 }
 
-/* line 315, ../scss/ulearn.scss */
+/* line 324, ../scss/ulearn.scss */
 .ploneCalendar {
   width: 100%;
   font-size: 13px;
 }
 
-/* line 316, ../scss/ulearn.scss */
+/* line 325, ../scss/ulearn.scss */
 .event {
   text-shadow: none;
   text-align: center;
 }
 
-/* line 317, ../scss/ulearn.scss */
+/* line 326, ../scss/ulearn.scss */
 .event:hover {
   background: #fff;
 }
 
-/* line 318, ../scss/ulearn.scss */
+/* line 327, ../scss/ulearn.scss */
 .todayevent {
   background: #007BC0;
   text-shadow: none;
@@ -2581,29 +2582,29 @@ input[type="text"]:focus {
   border-radius: 2px;
 }
 
-/* line 319, ../scss/ulearn.scss */
+/* line 328, ../scss/ulearn.scss */
 .event a {
   color: #555;
   font-weight: normal;
 }
 
-/* line 320, ../scss/ulearn.scss */
+/* line 329, ../scss/ulearn.scss */
 .todayevent a {
   color: #fff;
 }
 
-/* line 322, ../scss/ulearn.scss */
+/* line 331, ../scss/ulearn.scss */
 #box_valorats ul, #box_comentaris ul {
   margin-top: 10px;
   margin-left: 25px;
 }
 
-/* line 324, ../scss/ulearn.scss */
+/* line 333, ../scss/ulearn.scss */
 #box_valorats li a:hover, #box_comentaris li a:hover {
   text-decoration: underline;
 }
 
-/* line 326, ../scss/ulearn.scss */
+/* line 335, ../scss/ulearn.scss */
 #box_valorats li, #box_comentaris li {
   border-bottom: 1px solid #EEEEEE;
   font-size: 13px;
@@ -2612,14 +2613,14 @@ input[type="text"]:focus {
   padding-bottom: 8px;
 }
 
-/* line 333, ../scss/ulearn.scss */
+/* line 342, ../scss/ulearn.scss */
 #box_valorats i, #box_comentaris i {
   color: #34495E;
   font-size: 15px;
   vertical-align: middle;
 }
 
-/* line 340, ../scss/ulearn.scss */
+/* line 349, ../scss/ulearn.scss */
 .btn-comunitat {
   color: #FFFFFF;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -2642,7 +2643,7 @@ input[type="text"]:focus {
   width: 100%;
 }
 
-/* line 365, ../scss/ulearn.scss */
+/* line 374, ../scss/ulearn.scss */
 .btn-comunitat:hover,
 .btn-comunitat:active,
 .btn-comunitat.active,
@@ -2653,7 +2654,7 @@ input[type="text"]:focus {
   *background-color: #003bb3;
 }
 
-/* line 370, ../scss/ulearn.scss */
+/* line 379, ../scss/ulearn.scss */
 #menusup .nav-tabs > .btn-plus > a {
   background: none repeat scroll 0 0 #34495E;
   color: white;
@@ -2662,13 +2663,13 @@ input[type="text"]:focus {
   text-shadow: none;
 }
 
-/* line 377, ../scss/ulearn.scss */
+/* line 386, ../scss/ulearn.scss */
 #menusup .nav-tabs > .btn-plus > a:hover {
   background: none repeat scroll 0 0 #34495E;
   opacity: 0.8;
 }
 
-/* line 382, ../scss/ulearn.scss */
+/* line 391, ../scss/ulearn.scss */
 #communitylist {
   padding: 10px;
   font-size: 13px;
@@ -2676,7 +2677,7 @@ input[type="text"]:focus {
   text-shadow: 1px 1px 0px white;
   background: #f9f9f9;
 }
-/* line 389, ../scss/ulearn.scss */
+/* line 398, ../scss/ulearn.scss */
 #communitylist .eines {
   color: #34495E;
   float: right;
@@ -2684,12 +2685,12 @@ input[type="text"]:focus {
   margin: 0 10px 50px;
   text-decoration: none;
 }
-/* line 397, ../scss/ulearn.scss */
+/* line 406, ../scss/ulearn.scss */
 #communitylist ul {
   margin-left: 0;
   list-style: none;
 }
-/* line 402, ../scss/ulearn.scss */
+/* line 411, ../scss/ulearn.scss */
 #communitylist li {
   min-height: 55px;
   line-height: 20px;
@@ -2701,73 +2702,73 @@ input[type="text"]:focus {
   background: #f9f9f9;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #dddddd;
 }
-/* line 414, ../scss/ulearn.scss */
+/* line 423, ../scss/ulearn.scss */
 #communitylist a {
   color: #555;
   text-decoration: none;
 }
-/* line 418, ../scss/ulearn.scss */
+/* line 427, ../scss/ulearn.scss */
 #communitylist a h4 {
   color: #F58D3D;
   font-size: 16px;
   margin-bottom: 0;
   margin-top: 0;
 }
-/* line 424, ../scss/ulearn.scss */
+/* line 433, ../scss/ulearn.scss */
 #communitylist a h4:hover {
   opacity: 0.8;
 }
-/* line 428, ../scss/ulearn.scss */
+/* line 437, ../scss/ulearn.scss */
 #communitylist img {
   margin-right: 15px;
   margin-top: 3px;
   border: 2px solid white;
   max-width: 54px;
 }
-/* line 434, ../scss/ulearn.scss */
+/* line 443, ../scss/ulearn.scss */
 #communitylist img:hover {
   transition: all 0.25s ease 0s;
   border: 2px solid #F58D3D;
 }
-/* line 437, ../scss/ulearn.scss */
+/* line 446, ../scss/ulearn.scss */
 #communitylist .item {
   margin-right: 50px;
 }
 
-/* line 442, ../scss/ulearn.scss */
+/* line 451, ../scss/ulearn.scss */
 .icon-ulearn-community, .icon-ulearn.community {
   background-position: -312px -192px;
 }
 
-/* line 444, ../scss/ulearn.scss */
+/* line 453, ../scss/ulearn.scss */
 #listing-table a.contenttype-ulearn-community:before,
 .template-folder_tabular_view .listing a.contenttype-ulearn-community:before {
   background-position: -312px -192px;
 }
 
-/* line 448, ../scss/ulearn.scss */
+/* line 457, ../scss/ulearn.scss */
 #box_perfil .span9 {
   overflow-y: hidden;
   height: 150px;
 }
 
-/* line 449, ../scss/ulearn.scss */
+/* line 458, ../scss/ulearn.scss */
 #box_community img {
   width: 150px;
 }
 
-/* line 451, ../scss/ulearn.scss */
+/* line 460, ../scss/ulearn.scss */
 #searchcommunities {
   margin-right: auto;
   margin-left: auto;
   width: 300px;
 }
 
-/* line 454, ../scss/ulearn.scss */
+/* line 463, ../scss/ulearn.scss */
 #box_comunitats .bubble-content {
   padding: 6px 0px;
 }
-/* line 456, ../scss/ulearn.scss */
+/* line 465, ../scss/ulearn.scss */
 #box_comunitats .bubble a {
   background: none repeat scroll 0 0 #f58d3d;
   padding: 6px 14px;
@@ -2778,11 +2779,11 @@ input[type="text"]:focus {
   text-shadow: 1px 1px 0 #92480F;
   width: 33px;
 }
-/* line 466, ../scss/ulearn.scss */
+/* line 475, ../scss/ulearn.scss */
 #box_comunitats .bubble .arrow {
   border-right-color: #f58d3d;
 }
-/* line 469, ../scss/ulearn.scss */
+/* line 478, ../scss/ulearn.scss */
 #box_comunitats li a {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
